# reduction

./: .gitignore  CONVERSION_SUMMARY.md  README.md  fix_latex_macros.py  myst.yml  pyproject.toml
wiki/: index.ipynb
wiki/advanced/: fiat-shamir.ipynb  ias.ipynb  rom.ipynb  zero-knowledge.ipynb
wiki/assumptions/: DDH.ipynb  discrete-log.ipynb
wiki/exercises/: recap-quiz.ipynb
wiki/foundations/: intro.ipynb  notation.ipynb  reductions.ipynb  simulation-proofs.ipynb
wiki/primitives/: KE.ipynb  accumulators.ipynb  coin-tossing.ipynb  commitments.ipynb  dhke.ipynb  ke.ipynb  key-tweaking.ipynb  oblivious-transfer.ipynb  one-time-signatures.ipynb  pedersen.ipynb  signatures.ipynb
